# icarus_imx_test

./: Makefile.am  VCAGeneralInferenceimx8_lib_VS15.vcxproj.filters  VCAGeneralInferenceimx8_lib_VS15.vcxproj.vcxproj  VCAGeneralInferenceimx8_lib_VS15.vcxproj.vcxproj.filters  copyCurrentDirectoryToImx8.cmd  coralIcarusInference.h  coralIcarusInterface.h  main.cpp  make_arm.sh  make_linux.sh  makefile  mnist_pytorch_onnx_8_bit_edgetpu.tflite  mnist_pytorch_onnx_8_bit_sparse_edgetpu.tflite  readme.md  startup_debug.sh  startup_release.sh  tensorResultToPassOn.h  tensorResultToPassOnUint8.h
aarch64-obj_dbg/: libposenetimx8.so.0.0.0
aarch64-obj_rel/: libposenetimx8.so.0.0.0
aarch64-obj_rel/debug/: libicarusTfLiteInterface.so.0.0.0  libposenetimx8.so.0.0.0
aarch64-obj_rel/release/: libicarusTfLiteInterface.so.0.0.0  libposenetimx8.so.0.0.0
config/: eiq-apps_git.bb
include/: coralIcarusInterface.h  tensorResultToPassOnFloat.h  tensorResultToPassOnUint8.h
lib/Debug_x64/: libposenetimx8.lib
lib/Debug_x64/VCAGener.D30840A3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  VCAGeneralInferenceimx8_lib_VS15.lastbuildstate  lib.command.1.tlog
lib/Release_x64/: libposenetimx8.lib
lib/Release_x64/VCAGener.D30840A3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  VCAGeneralInferenceimx8_lib_VS15.lastbuildstate  lib.command.1.tlog
src/: Makefile.am  coralIcarusInference.cpp  coralIcarusInference.h  coralIcarusInterface.h  general_inferencer.cpp  general_inferencer.h  tensorResultToPassOn.cpp  tensorResultToPassOnFloat.cpp  tensorResultToPassOnFloat.h  tensorResultToPassOnUint8.cpp  tensorResultToPassOnUint8.h  tflite_inference.cpp  tflite_inference.h
